# terminal-flashcards

./: CMakeLists.txt  LICENSE  README.md  dbdiagram.txt
src/: main.cpp
src/data/: Answer.h  Deck.h  Question.h
src/database/: Database.cpp  Database.h  Sql.h
src/database/models/: Deck.h
src/files/: Files.cpp  Files.h
src/flashcards/: Flashcards.cpp  Flashcards.h
src/ui/: Select.cpp  Select.h  UI.cpp  UI.h  Utils.cpp  Utils.h
